<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PIN Example</string>
    <string name="welcome">Welcome to the Test Application</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    <string name="numpad1">1</string>
    <string name="numpad2">2</string>
    <string name="numpad3">3</string>
    <string name="numpad4">4</string>
    <string name="numpad5">5</string>
    <string name="numpad6">6</string>
    <string name="numpad7">7</string>
    <string name="numpad8">8</string>
    <string name="numpad9">9</string>
    <string name="numpad0">0</string>
    <string name="numpadDot">.</string>
    <string name="numpadBack">del</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="enter_pin_number">Enter PIN number</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="re_enter_pin">Re-enter PIN</string>
    <string name="pin_length_error">Pins must be 4 digits.</string>
    <string name="pins_do_not_match">Pins do not match.</string>
    <string name="skip">Not now</string>
    <string name="save">SAVE</string>
    <string name="empty"></string>
    
</resources>