<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        style="@style/SimpleTitle"
        android:text="@string/welcome" />

    <TextView
        style="@style/TermsBody"
        android:text="@string/lorem_ipsum" />

    <Button
        android:id="@+id/startApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:visibility="gone"
        android:text="@string/app_name" />

</LinearLayout>