<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        style="@style/SimpleTitle"
        android:text="@string/enter_pin_number" />

    <EditText
        android:id="@+id/pinOriginal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:hint="@string/enter_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pinCopy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:hint="@string/re_enter_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pinSave"
            style="@style/ButtonText"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/green_button_gradient"
            android:text="@string/save" />

        <Button
            android:id="@+id/pinSkip"
            style="@style/ButtonText"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/black_button_gradient"
            android:text="@string/skip" />
    </LinearLayout>

    <include
        android:id="@+id/numpad"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        layout="@layout/number_keypad" />

</LinearLayout>